tests/errors/e_tstring5.pyx
# mode: error

# This is split into many sub-files because some errors terminate the parser

t'{x:{;}}'

_ERRORS = """
5:6: Expected an identifier or literal
"""
